# OBBViewer

./: .gitignore  CMakeLists.txt  CONTEXT.md  KNOWLEDGE.md  LCPSViewer.py  LCPSViewer.spec  README.md  SUBMODULE_VERSION.md  lastest_result.md  main.py  pyproject.toml  recv.py  recvOBB.py  sendOBB.cpp  sender.cpp  tags  test_fixes.md
.serena/: project.yml
claudedocs/: 2025-12-24-lcps-plugin-architecture-v2.md  2025-12-24-lcps-tool-architecture.md  PRD_LCPS工具咨询.md
claudedocs/LCPS/: LCPS_EXPERT_EVALUATION_REPORT.md  lcps-coordination-requirements.md
docs/adr/: 2025-12-24-lcps-tool-architecture-v2.md
docs/api/: data-format.md
docs/architecture/: system-design.md
docs/deployment/: binary-release.md
docs/design/: LCPS_CLIENT_ANOMALY_DETECTION.md  LCPS_CLIENT_DATA_PROTOCOL.md  LCPS_CLIENT_HDF5_FORMAT.md  LCPS_CLIENT_IMPLEMENTATION_PLAN.md  LCPS_COMPREHENSIVE_DESIGN.md  LCPS_PLUGIN_ARCHITECTURE.md  LCPS_SERVER_ADAPTATION_ANALYSIS.md  LCPS_SERVER_BLACKBOX_INDEX.md  LCPS_SERVER_BLACKBOX_SUMMARY.md  LCPS_SERVER_DEBUG_EVALUATION.md  LCPS_SERVER_ORIGINAL.md
docs/development/: setup.md
docs/management/: CONTEXT.md  PLANNING.md  PRD_LCPS工具咨询.md  SESSION_SUMMARY.md  TASK.md
docs/research/: 2025.12.21_多维度探索分析报告.md
docs/usage/: quick-start-lcps.md  quick-start.md  sendOBB-recvOBB.md
examples/: layer1_receiver_example.py  layer2_sync_record_example.py  triangle.py
lcps_tool/: __init__.py  main.py
lcps_tool/data_models/: __init__.py  synced_frame.py
lcps_tool/layer1/: README.md  __init__.py  (+1 more)
obbdemo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+17 files in other folders)
