[project]
name = "obbdemo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "h5py>=3.15.1",
    "imgui[pygame]>=2.0.0",
    "numpy>=2.4.0",
    "pygame>=2.6.1",
    "pymongo>=4.15.5",
    "pyopengl>=3.1.10",
    "pyzmq>=27.1.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
